// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration — evaluate(text) → renderSheet(result) > snapshots the full pipeline for a canonical mixed input 1`] = `
{
  "html": "<style>
  html { color-scheme: light dark; }
  body {
    font-family: var(--ui-font, ui-monospace, SFMono-Regular, monospace);
    color: var(--root-color, inherit);
    background: var(--root-background-color, transparent);
    margin: 0; padding: 12px;
    font-size: 13px;
  }
  table.reckon { width: 100%; border-collapse: collapse; }
  td { padding: 2px 8px; vertical-align: top; white-space: pre-wrap; }
  td.source { color: var(--root-color, inherit); }
  td.result { text-align: right; opacity: 0.85; }
  tr.blank td { height: 1.2em; }
  tr.comment td.source { opacity: 0.6; }
  tr.total td {
    border-top: 1px solid currentColor;
    padding-top: 6px;
    font-weight: 600;
  }
  tr.total td.label { text-align: left; }
</style>
<table class="reckon">
<tr class="comment"><td class="source" colspan="2">Project budget Q2</td></tr>
<tr class="blank"><td colspan="2"></td></tr>
<tr class="assignment"><td class="source">tax = 20%</td><td class="result">20%</td></tr>
<tr class="assignment"><td class="source">salary = 200000</td><td class="result">200,000</td></tr>
<tr class="value"><td class="source">100 + 20%</td><td class="result">120</td></tr>
<tr class="value"><td class="source">100 km in miles</td><td class="result">62.13711922373339 miles</td></tr>
<tr class="assignment"><td class="source">current tax = 20%</td><td class="result">20%</td></tr>
<tr class="value"><td class="source">300 + current tax</td><td class="result">360</td></tr>
<tr class="comment"><td class="source" colspan="2"># this is a heading</td></tr>
<tr class="comment"><td class="source" colspan="2">// note to self</td></tr>
<tr class="value"><td class="source">5 # inline comment</td><td class="result">5</td></tr>
<tr class="total"><td class="label">Total</td><td class="result">485</td></tr>
</table>",
  "script": "",
}
`;

exports[`renderSheet > matches the canonical snapshot 1`] = `
{
  "html": "<style>
  html { color-scheme: light dark; }
  body {
    font-family: var(--ui-font, ui-monospace, SFMono-Regular, monospace);
    color: var(--root-color, inherit);
    background: var(--root-background-color, transparent);
    margin: 0; padding: 12px;
    font-size: 13px;
  }
  table.reckon { width: 100%; border-collapse: collapse; }
  td { padding: 2px 8px; vertical-align: top; white-space: pre-wrap; }
  td.source { color: var(--root-color, inherit); }
  td.result { text-align: right; opacity: 0.85; }
  tr.blank td { height: 1.2em; }
  tr.comment td.source { opacity: 0.6; }
  tr.total td {
    border-top: 1px solid currentColor;
    padding-top: 6px;
    font-weight: 600;
  }
  tr.total td.label { text-align: left; }
</style>
<table class="reckon">
<tr class="comment"><td class="source" colspan="2">Project budget for Q2</td></tr>
<tr class="blank"><td colspan="2"></td></tr>
<tr class="assignment"><td class="source">tax = 20%</td><td class="result">0.2</td></tr>
<tr class="value"><td class="source">100 km in miles</td><td class="result">62.137 mi</td></tr>
<tr class="value"><td class="source">300 + tax</td><td class="result">360</td></tr>
<tr class="total"><td class="label">Total</td><td class="result">360</td></tr>
</table>",
  "script": "",
}
`;
